--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,14 +2,29 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.myapplication">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MyApplication">
-        <activity android:name=".MainActivity2"></activity>
+        android:theme="@style/Theme.Design.NoActionBar">
+        <activity android:name=".activitydizi6"></activity>
+        <activity android:name=".activitydizi5" />
+        <activity android:name=".activitydizi4" />
+        <activity android:name=".activitydizi3" />
+        <activity android:name=".activitydizi2" />
+        <activity android:name=".activityfilm6" />
+        <activity android:name=".activityfilm5" />
+        <activity android:name=".activityfilm4" />
+        <activity android:name=".activityfilm3" />
+        <activity android:name=".activityfilm2" />
+        <activity android:name=".activitydizi1" />
+        <activity android:name=".Activityfilm1" />
+        <activity android:name=".MainActivity2" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
